# magic-converter

./: .gitignore  Dockerfile  README.md  pyproject.toml
magic_converter/: __init__.py  functions.py  index.py
magic_converter/templates/: base.html
magic_converter/templates/errors/: internal_server_error.html
magic_converter/templates/index/: index.html
src/: __init__.py  errors.py
src/static/: style.css
src/templates/errors/: page_not_found.html
